--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -1,20 +1,16 @@
-/// List functions courtesy of the wonderful folks at Team Sass.
-/// Check out their awesome grid: Singularity.
-
-/// @access private
 /// Get  percentage from a given ratio.
+/// @access private
 /// @param {Number} $ratio [1] - The column ratio of the element.
 /// @returns {Number} - The percentage value.
 @function jeet-get-span($ratio: 1) {
   @return $ratio * 100;
 }
 
-/// @access private
 /// Work out the column widths based on the ratio and gutter sizes.
+/// @access private
 /// @param {Number} $ratios [1] - The column ratio of the element.
 /// @param {Number} $gutter [$jeet-gutter] - The gutter for the column.
-/// @returns {List} $width $gutter - A list containing the with and gutter for
-/// the element.
+/// @returns {List} $width $gutter - A list containing the with and gutter for the element.
 @function jeet-get-column($ratios: 1, $gutter: $jeet-gutter) {
   $ratios: if(not $jeet-parent-first, jeet-reverse($ratios), $ratios);
   $width: 100;
@@ -27,8 +23,8 @@
   @return $width $gutter;
 }
 
-/// @access private
 /// Get the set layout direction for the project.
+/// @access private
 /// @returns {String} $direction - The layout direction.
 @function jeet-get-layout-direction() {
   $direction: if($jeet-layout-direction == "RTL", right, left);
@@ -36,9 +32,8 @@
   @return $direction;
 }
 
+/// Replace a specified list value with a new value (uses built in set-nth() if available).
 /// @access private
-/// Replace a specified list value with a new value (uses built in set-nth()
-/// if available)
 /// @param {List} $list - The list of values you want to alter.
 /// @param {Number} $index - The index of the list item you want to replace.
 /// @param {*} $value - The value you want to replace $index with.
@@ -63,8 +58,8 @@
   @return $result;
 }
 
+/// Reverse a list (progressively enhanced for Sass 3.3).
 /// @access private
-/// Reverse a list (progressively enhanced for Sass 3.3)
 /// @param {List} $list - The list of values you want to reverse.
 /// @returns {List} $result - The reversed list.
 @function jeet-reverse($list) {
@@ -98,8 +93,8 @@
   @return $list;
 }
 
-/// @access private
 /// Get the opposite direction to a given value.
+/// @access private
 /// @param {String} $dir - The direction you want the opposite of.
 /// @returns {String} - The opposite direction to $dir.
 /// @throw Error if an incorrect string for position is provided.
@@ -122,8 +117,8 @@
   }
 }
 
-/// @access private
 /// Perform a value into a percentage value.
+/// @access private
 /// @param {Number} $value - The value which should be converted.
 /// @returns {Number} $value - The percentage.
 @function jeet-get-percentage($value) {
