--- a/src/views/_hero.jade
+++ b/src/views/_hero.jade
@@ -1,6 +1,7 @@
 .hero.text-center(data-scroll-index='0')
   .contained
-    h1.headline.white.scrollReveal.fade-in A grid system for humans
+    include _announcement
+    h1.headline.white.scrollReveal.fade-in A grid system for human
     p.nav-narrative.white.scrollReveal.fadeInUp-staggered-second
       | We still build things the way machines read them - not the way we intuit them.  Jeet allows you to express your page grid the same way a 
       a.white.inline-link(data-scroll-goto='4') human would describe
