--- a/tests/functions/shift/shift.scss
+++ b/tests/functions/shift/shift.scss
@@ -1,4 +1,4 @@
-@import 'scss/jeet/index';
+@import 'scss/jeet/_jeet';
 
 .test {
   @include shift($ratios: 1/5, $col-or-span: column, $gutter: 5);
