--- a/tests/functions/span/span.scss
+++ b/tests/functions/span/span.scss
@@ -1,5 +1,5 @@
 @import 'scss/jeet/_jeet';
 
 .test {
-  @include span($ratio: 1/5, $offset: 1/5, $cycle: 5);
+  @include j-span($ratio: 1/5, $offset: 1/5, $cycle: 5);
 }
