--- a/src/views/_announcement.jade
+++ b/src/views/_announcement.jade
@@ -1,1 +1,1 @@
-p.announcement Jeet is currently unmaintained. You are free to continue using it as-is, or to volunteer to take over maintenance yourself!
+p.announcement Jeet is now being maintained! Thank you for your patience.
