Remove superfluous uncycle in quickrefs

--- a/styl/index.styl
+++ b/styl/index.styl
@@ -1,9 +1,9 @@
 // API Quick Reference
 // -------------------
-// column($ratios = 1, $offset = 0, $cycle = 0, $uncycle = 0, $gutter = $jeet.gutter)
+// column($ratios = 1, $offset = 0, $cycle = 0, $gutter = $jeet.gutter)
 // column-width($ratios = 1, $gutter = $jeet.gutter)
 // column-gutter($ratios = 1, $gutter = $jeet.gutter)
-// span($ratio = 1, $offset = 0, $cycle = 0, $uncycle = 0)
+// span($ratio = 1, $offset = 0, $cycle = 0)
 // move($ratios = 0, $col-or-span = column, $gutter = $jeet.gutter)
 // unmove()
 // debug($color = blue, $important = false)
