--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,8 +1,8 @@
 // API Quick Reference
 // -------------------
 // column($ratios: 1, $offset: 0, $cycle: 0, $gutter: map-get($jeet, 'gutter'))
-// column-width($ratios: 1, $g: map-get($jeet, 'gutter'))
-// column-gutter($ratios: 1, $g: map-get($jeet, 'gutter'))
+// column-width($ratios: 1, $gutter: map-get($jeet, 'gutter'))
+// column-gutter($ratios: 1, $gutter: map-get($jeet, 'gutter'))
 // span($ratio: 1, $offset: 0, $cycle: 0)
 // move($ratios: 0, $col-or-span: column, $gutter: map-get($jeet, 'gutter'))
 // unmove()
