--- a/src/views/_installation.pug
+++ b/src/views/_installation.pug
@@ -8,14 +8,14 @@
         li
           code.inline.to-copy npm install -D node-sass jeet
         li
-          code.inline.to-copy @import 'node_modules/jeet/scss/index';
+          code.inline.to-copy @import 'node_modules/jeet/jeet';
     .half.stylus.scrollReveal.slide-in-second
       h3 Stylus Installation
       ol
         li
           code.inline.to-copy npm install -D stylus jeet
         li
-          code.inline.to-copy @import 'node_modules/jeet/styl'
+          code.inline.to-copy @import 'node_modules/jeet/jeet'
       p.usage
         | *Learn more about official integrations <a class="inline-link" href="https://github.com/mojotech/jeet/tree/master/docs">here</a>.
   include _nav-orange
