Added by param $clearfix in column() and span() mixins. Default value $clearfix: true. If $clearfix: false, then clearfix() mixin will not work.

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,4 +1,4 @@
-@mixin column($ratios: 1, $offset: 0, $cycle: 0, $gutter: map-get($jeet, 'gutter')) {
+@mixin column($ratios: 1, $offset: 0, $cycle: 0, $gutter: map-get($jeet, 'gutter'), $clearfix: true) {
   $side: _get-layout-direction();
   $opposite-side: _opposite-direction($side);
   $column-widths: _get-column($ratios, $gutter);
@@ -18,7 +18,9 @@
     }
   }
 
-  @include clearfix;
+  @if $clearfix {
+    @include clearfix;
+  }
 
   float: $side;
   clear: none;
@@ -82,7 +84,7 @@
 }
 
 
-@mixin span($ratio: 1, $offset: 0, $cycle: 0) {
+@mixin span($ratio: 1, $offset: 0, $cycle: 0, $clearfix: true) {
   $side: _get-layout-direction();
   $opposite-side: _opposite-direction($side);
   $span-width: _get-span($ratio);
@@ -97,7 +99,10 @@
     }
   }
 
-  @include clearfix;
+  @if $clearfix {
+    @include clearfix;
+  }
+  
   float: $side;
   clear: none;
   text-align: inherit;
