Added mixin for SASS, Stylus and updated docs

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,7 +13,11 @@
 // unstack()
 // align($direction: both)
 // clearfix()
+// media-row()
+// media($fill: false, $spacing-left: false, $spacing-right: false)
+// unmedia()
 
 @import '_settings';
 @import '_functions';
 @import '_grid';
+@import '_media';
