--- a/styl/_media.styl
+++ b/styl/_media.styl
@@ -17,10 +17,8 @@ media($fill = false, $spacing-left = false, $spacing-right = false)
   if $spacing-right
     padding-right: $spacing-right
 
-unmedia($reset-spacing = flase)
+unmedia()
   display: block
   padding-left: 0
   padding-right: 0
-
-  if $reset-spacing
-    width: auto
+  width: auto
