--- a/styl/index.styl
+++ b/styl/index.styl
@@ -15,7 +15,7 @@
 // clearfix()
 // media-row()
 // media($fill = 1, $spacing-left = false, $spacing-right = false)
-// media($reset-spacing = false)
+// media()
 
 @import '_settings'
 @import '_functions'
