--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,10 +1,14 @@
-@mixin column($ratios: 1, $offset: 0, $cycle: 0, $gutter: map-get($jeet, 'gutter'), $clearfix: true) {
+@mixin column($ratios: 1, $offset: 0, $cycle: 0, $gutter: map-get($jeet, 'gutter'), $clearfix: true, $nth: map-get($jeet, 'nth')) {
   $side: _get-layout-direction();
   $opposite-side: _opposite-direction($side);
   $column-widths: _get-column($ratios, $gutter);
   $margin-last: 0;
   $margin-l: $margin-last;
   $margin-r: nth($column-widths, 2);
+  $nth-selector: "nth-child";
+  @if $nth == "type" {
+    $nth-selector: "nth-of-type";
+  }
 
   @if $offset != 0 {
     @if $offset < 0 {
@@ -32,18 +36,18 @@
   };
 
   @if $cycle != 0 {
-    &:nth-child(n) {
+    &:#{$nth-selector}(n) {
       margin-#{_opposite-direction($side)}: $margin-r * 1%;
       float: $side;
       clear: none;
     }
 
-    &:nth-child(#{$cycle}n) {
+    &:#{$nth-selector}(#{$cycle}n) {
       margin-#{_opposite-direction($side)}: $margin-last * 1%;
       float: _opposite-direction($side);
     }
 
-    &:nth-child(#{$cycle}n + 1) {
+    &:#{$nth-selector}(#{$cycle}n + 1) {
       clear: both;
     }
   } @else {
@@ -84,12 +88,17 @@
 }
 
 
-@mixin span($ratio: 1, $offset: 0, $cycle: 0, $clearfix: true) {
+@mixin span($ratio: 1, $offset: 0, $cycle: 0, $clearfix: true, $nth: map-get($jeet, "nth")) {
   $side: _get-layout-direction();
   $opposite-side: _opposite-direction($side);
   $span-width: _get-span($ratio);
   $margin-r: 0;
   $margin-l: $margin-r;
+  $nth-selector: "nth-child";
+  @if $nth == "type" {
+    $nth-selector: "nth-of-type";
+  }
+
   @if $offset != 0 {
     @if $offset < 0 {
       $offset: $offset * -1;
@@ -102,7 +111,7 @@
   @if $clearfix {
     @include clearfix;
   }
-  
+
   float: $side;
   clear: none;
   text-align: inherit;
@@ -113,16 +122,16 @@
   };
 
   @if $cycle != 0 {
-    &:nth-child(n) {
+    &:#{$nth-selector}(n) {
       float: $side;
       clear: none;
     }
 
-    &:nth-child(#{$cycle}n) {
+    &:#{$nth-selector}(#{$cycle}n) {
       float: _opposite-direction($side);
     }
 
-    &:nth-child(#{$cycle}n + 1) {
+    &:#{$nth-selector}(#{$cycle}n + 1) {
       clear: both;
     }
   }
