--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -2,5 +2,6 @@ $jeet: (
   gutter: 3,
   max-width: 1440px,
   layout-direction: LTR,
-  parent-first: false
+  parent-first: false,
+  nth: child
 );
