--- a/test/node-stylus/style.styl
+++ b/test/node-stylus/style.styl
@@ -1,5 +1,11 @@
 div
   column(1/3)
 
+section.child
+  column(1/4, $cycle: 4)
+
+section.type
+  column(1/4, $cycle: 4, $nth: "type")
+
 span
   span(1/2, $clearfix: false)
